force-app/main/default/objects/Form_Setting__c/Form_Setting__c.object-meta.xml
<CustomObject>
    <label>Form Setting</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Form Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>