force-app/main/default/objects/Form_Setting__c/fields/AML_Tool_Version__c.field-meta.xml
<CustomField>
    <fullName>AML_Tool_Version__c</fullName>
    <label>AML Tool Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>