force-app/main/default/objects/Form_Setting__c/fields/Form_Object_ApiName__c.field-meta.xml
<CustomField>
    <fullName>Form_Object_ApiName__c</fullName>
    <label>Form Object ApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>