force-app/main/default/objects/Form_Setting__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AML Risk Level</fullName>
            </value>
            <value>
                <fullName>Details Page</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>UBO</fullName>
            </value>
            <value>
                <fullName>Directors/Auth.Sign. KYC</fullName>
            </value>
            <value>
                <fullName>Corporate KYC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>